modules/voyscript/tests/scripts/analyzer/errors/redefine_class_constant.voy
# See also `parser-warnings/shadowed-constant.voy`.
const TEST = 25


func test():
	# Error here (trying to set a new value to a constant).
	TEST = 50
